# dask-regionprops

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
benchmarks/: basic_benchmark.py
dask_regionprops/: __init__.py  regionprops.py  types.py  utils.py
docs/: conf.py  contributing.md  index.md
docs/examples/: basic-example.ipynb
tests/: test_numpy.py  test_regionprops.py  test_utils.py  util.py
tests/data_files/: reference_shapes_random_seed_1.npy
