[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.isort]
profile = "black"
src_paths = "dask_regionprops"
multi_line_output = 3

[tool.pydocstyle]
match_dir = "dask_regionprops"
convention = "numpy"
add_select = ["D402","D415","D417"]

[tool.pytest.ini_options]
testpaths = ["docs/examples", "tests"]
addopts = [
    "--current-env",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--ignore-glob=docs/examples/*.py",
]

[tool.mypy]
files = "dask_regionprops"
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
implicit_reexport = false
# this is strict!
# disallow_untyped_defs = true
show_column_numbers = true
show_error_codes = true
ignore_missing_imports = true
