
[metadata]
name = dask-regionprops
url = https://github.com/jrussell25/dask-regionprops
author = John Russell
author_email = johncrussell25@gmail.com


description = Compute region properties using dask delayed and dataframe
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/jrussell25/dask-regionprops

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
; install_requires =
    ; numpy

[options.extras_require]
testing =
    tox
    tox-conda
    pytest
    pytest-cov
    nbval
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
doc =
    jupyter-sphinx
    myst-nb
    numpydoc
    Sphinx >= 1.5
    sphinx-book-theme
    sphinx-copybutton
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton



[bdist_wheel]
universal = 1



[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
# ignore =  D100, D213, D401, D413, D107, W503
