[metadata]
name = dask_regionprops
description = Compute region properties using dask delayed and dataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrussell25/dask-regionprops
author = John Russell
author_email = johncrussell25@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source Code =https://github.com/jrussell25/dask-regionprops

[options]
packages = find:
install_requires =
    dask
    numpy
    pandas
    scikit-image>=0.19
    xarray
python_requires = >=3.7
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
doc =
    Sphinx>=1.5
    jupyter-sphinx
    myst-nb
    numpydoc
    sphinx-book-theme
    sphinx-copybutton
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
testing =
    nbval
    pytest
    pytest-cov
    tox
    tox-conda

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
